# nbv

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  robots.txt  sample.ipynb  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-12-nbv-implementation.md
docs/superpowers/specs/: 2026-05-12-nbv-design.md
src/: cli.rs  env.rs  generate.rs  lib.rs  main.rs  setup.rs  theme.rs
src/ipynb/: mod.rs  model.rs  parse.rs
src/render/: code.rs  document.rs  frame.rs  html_table.rs  markdown.rs  mod.rs  output.rs  pad.rs  plain.rs  sink.rs  table.rs  test_support.rs  text.rs  traceback.rs
src/render/image/: iterm.rs  kitty.rs  mod.rs  placeholder.rs  png_info.rs
src/setup/: mod.rs  unix.rs  windows.rs
tests/: generate.rs  integration.rs  markdown_file.rs
tests/fixtures/: doc_with_table.md  large.ipynb  md_cell_image.ipynb  sample.md  simple.ipynb  with_error.ipynb  with_image.ipynb  with_local_image.md  with_stream.ipynb  with_tables.ipynb
