[package]
name = "nbv"
version = "0.6.1"
edition = "2021"
description = "A fast terminal-native Jupyter notebook viewer"
license = "MIT"
repository = "https://github.com/phd1000x-ux/nbv"
readme = "README.md"
exclude = ["/docs", "/tests", "/assets", "/.github", "/rust-toolchain.toml"]

[[bin]]
name = "nbv"
path = "src/main.rs"

[lib]
name = "nbv"
path = "src/lib.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = { version = "0.3", features = ["env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5.3", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "html", "yaml-load", "dump-load", "dump-create", "regex-fancy"] }
pulldown-cmark = { version = "0.10", default-features = false }
crossterm = "0.29"
base64 = "0.22"
unicode-width = "0.2"
signal-hook = "0.4"

[dev-dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
